funcionarios e erros